Adjusted width of footer to avoid horizontal scrolling

--- a/css/styles.css
+++ b/css/styles.css
@@ -348,5 +348,7 @@ nav h1 a {
 }
 
 @media only screen and (min-width: 801px) {
-	
+	.inside #footer {
+		width: 95%;
+	}
 }
